<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".EditorActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/main_lin_lay_dim">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="vertical">

                <TextView
                    style="@style/CategoryStyle"
                    android:text="grocery overview" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/groceryNameEdit"
                        android:inputType="textCapWords"
                        android:hint="@string/category_grocery_name"
                        style="@style/EditorFieldStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/priceEditText"
                        android:paddingBottom="12dp"
                        android:hint="@string/category_grocery_price"
                        style="@style/EditorFieldStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <Button
                        android:id="@+id/increaseBtn"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="6dp"
                        android:text="+"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/qtyEditText"
                        android:layout_width="51dp"
                        android:layout_height="80dp"
                        android:layout_margin="16dp"
                        android:hint="@string/grocery_quantity"
                        android:inputType="number"/>

                    <Button
                        android:id="@+id/decreaseBtn"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="6dp"
                        android:text="-"
                        android:textStyle="bold" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/container_supplier"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="12dp">
                    <EditText
                        android:id="@+id/supplierNameEdit"
                        android:layout_alignParentTop="true"
                        android:hint="@string/category_grocery_supplier_name"
                        android:padding="12dp"
                        style="@style/EditorFieldStyle"/>
                    <EditText
                        android:id="@+id/supplierPhoneEdit"
                        android:layout_below="@+id/supplierNameEdit"
                        android:padding="6dp"
                        android:hint="@string/phonenumber"
                        style="@style/EditorFieldStyle"/>

                    <Button
                        android:id="@+id/supplierPhoneBtn"
                        android:layout_width="106dp"
                        android:layout_height="36dp"
                        android:layout_below="@+id/supplierNameEdit"
                        android:layout_marginBottom="12dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="4dp"
                        android:layout_toRightOf="@+id/supplierPhoneEdit"
                        android:text="Contact" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
